@@ -204,6 +204,11 @@ Shorewall 4.4.7 RC 2
 
     then 'shorewall start' would fail.
 
+4)  Previously, the 'nosmurfs' option was ignored in IPv6
+    compilations. As part of this fix, 'nosmurfs' handling when
+    SMURF_LOG_LEVEL is specified has been improved for both IPv4 and
+    IPv6.
+
 ----------------------------------------------------------------------------
              K N O W N   P R O B L E M S   R E M A I N I N G
 ----------------------------------------------------------------------------
