@@ -18,6 +18,8 @@ Changes in Shorewall 4.4.7
 
 9)  Correct defects in generate_matrix().
 
+10) Fix and optimize 'nosmurfs'.
+
 Changes in Shorewall 4.4.6
 
 1)  Fix for rp_filter and kernel 2.6.31.
